--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -5,48 +5,46 @@
     font-weight: normal;
     font-style: normal;
 }
-  @font-face{
-    
-    font-family: 'THSarabunNewIT';
+@font-face {
+    font-family: 'THSarabunIT';
     src: url('THSarabunIT.woff2') format('woff2'),
          url('THSarabunIT.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-  }
- /* @page{
-   margin-top: 1.5cm;
-   margin-left: 2.5cm;
-   margin-right: 2cm;
- } */
+}
+
 .header{
   position:relative;
 }
 .head{
-  font-size: 16pt;
-}
-.h2{
+  font-weight: bold;
   font-size: 18pt;
 }
 html, body {
   margin: 0;
-  padding: 10;
-  font-size: 14pt;
+  padding: 10px;
+  font-size: 16pt;
   font-family: 'THSarabunNew';
   background-color: white;
-  line-height: 1.1;
  }
-.table {
+table {
   border-spacing: 0;
   border-collapse: collapse;
   width:100%;
-  font-size: 14pt;
+  font-size: 16pt;
 }
-table tr,td{
+table tr,td,th{
+  
+  border : 1px solid black;
   border : 0px solid black;
 }
 table th{
   border-top : 1px dashed black;
   border-bottom:1px dashed black;
+  font-size: 16pt;
+}
+.font14{
+  font-size: 14pt;
 }
 .left{
   text-align:left;
@@ -97,6 +95,7 @@ table th{
 .tbfooter{
   border-top: 1px dashed black;
 }
+
 .headkut{
   text-align: center;
   font-size: 29pt;
@@ -107,20 +106,15 @@ table th{
   float: left
 }
 hr{
-  border: 1px dashed black;
-}
-.dashfoot{
-  border-bottom: 1px dashed black;
-  width: 100%;
-}
-.dash-top{
   border-top: 1px dashed black;
 }
-.dash-bottom{
-  border-bottom: 1px dashed black;
-}
+/*.fontspace{
+  width: 30px;
+  height: 3px;
+  float: left;
+}*/
 .fontspace{
-  width: 94.488188976px;
+  width: 50px;
   height: 3px;
   float: left;
 }
@@ -129,4 +123,7 @@ hr{
 }
 .h3{
   font-size: 16pt;
+}
+.break { 
+  page-break-after:always; 
 }
