--- a/public/reset.css
+++ b/public/reset.css
@@ -18,6 +18,16 @@ ol, ul {
 blockquote, q {
   quotes: none; }
 
+blockquote {
+  &:before, &:after {
+    content: '';
+    content: none; } }
+
+q {
+  &:before, &:after {
+    content: '';
+    content: none; } }
+
 table {
   border-collapse: collapse;
   border-spacing: 0; }
